example/src/index.css
/* Color definitions */
/* Primary Colors */
/* Secondary Colors */
/* Status Colors */
/* Other colors */
/* Grid system and spacing definitions */
/* Other sizes */
/* Useful mixins */
.focusBox {
  outline: 2px dotted #ABC233;
  outline-offset: 6px;
}
/* Typography */
@font-face {
  font-family: 'Cisco';
  src: url('assets/fonts/CiscoSansTTRegular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'CiscoLight';
  src: url('assets/fonts/CiscoSansTTLight.ttf') format('truetype');
  font-weight: lighter;
  font-style: normal;
}
@font-face {
  font-family: 'CiscoHeavy';
  src: url('assets/fonts/CiscoSansTTHeavy.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}
.kitchen_sink {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}
.sample_tile {
  width: 40%;
  margin: 24px;
}
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}
.environment_panel {
  list-style: none;
  padding: 0;
}

.environment_panel li {
  display: flex;
  align-items: center;
  margin-bottom: 12px;
}
.environment_panel li img {
  height: 20px;
  width: auto;
  margin-right: 24px;
}

